--- a/Vidly_Demo/Views/Customers/Details.cshtml
+++ b/Vidly_Demo/Views/Customers/Details.cshtml
@@ -1,8 +1,8 @@
-﻿
+﻿@model Vidly_Demo.ViewModels.DetailsCustomerViewModel
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>@Model.Customer.Name</h2>
 
