--- a/Vidly_Demo/Views/Customers/Index.cshtml
+++ b/Vidly_Demo/Views/Customers/Index.cshtml
@@ -1,8 +1,14 @@
-﻿
+﻿@model Vidly_Demo.ViewModels.IndexCustomerViewModel
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Customers</h2>
+<ul>
+    @foreach(var customer in Model.Customers)
+    {
+        <li>@Html.ActionLink(customer.Name, "Details/" + customer.Id, "Customers")</li>
+    }
+</ul>
 
